# snake-egg

./: .gitignore  Cargo.toml  Makefile  pyproject.toml
snake_egg/tests/: test_dataclass.py  test_dynamic.py  test_dynamic_extra.py  test_egg_interface.py  test_lambda.py  test_math.py  test_simple.py  test_tuple.py
src/: core.rs  lang.rs  lib.rs  util.rs
